syntax = "proto3";
package fixbug;
option cc_generic_services = true;

message ResultCode {
    int32 errcode = 1; //错误代码: 0表示成功
    bytes errmsg = 2; //错误内容
}

//把Login函数的参数和返回值分别封装成一个message，填入下面的service
message LoginRequest { //登录请求
    bytes name = 1;
    bytes pwd = 2;
}
message LoginResponse { //登录响应
    ResultCode result = 1;
    bool sucess = 2;
}

//Register函数定义
message RegisterRequest { 
    uint32 id = 1;
    string name = 2;
    string pwd = 3;
}
message RegisterResponse {
    ResultCode result = 1;
    bool sucess = 2;
}


//rpc服务类,一个服务多个方法
service UserServiceRpc {
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
}